--- a/Formulario.html
+++ b/Formulario.html
@@ -2,9 +2,24 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/styleFormulario.css">
+    <link rel="icon" href="Recursos/Logo.ico">
+    <title>Regístrate</title>
 </head>
 <body>
+    <div class="menu">
+        <img src="Recursos/Logo.png" alt="Logo">
+        <div class="botonInicio">
+            
+        </div>
+        <div class="botonInicio">
+            <a href="Index.html">Inicio</a>
+            <a href="Catalogo.html">Catálogo</a>
+            <a href="Info.html">Sobre Nosotros</a>
+            <a href="Formulario.html">Registrate</a>
+            <a href="inicioSesion.html">Iniciar Sesion</a>
+        </div>
+    </div>
     <a href="Index.html">Volver</a>
 </body>
 </html>
