--- a/Index.html
+++ b/Index.html
@@ -2,14 +2,22 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="Recursos/Logo.ico">
+    <link rel="stylesheet" href="CSS/styleIndex.css">
     <title>Index</title>
 </head>
 <body>
-    <a href="Catalogo.html">Catalogo</a>
-    <a href="Formulario.html">Formulario</a>
-    <a href="Info.html">Info</a>
-    <a href="Producto1.html">Producto1</a>
-    <a href="Producto2.html">Producto2</a>
-    <a href="Producto3.html">Producto3</a>
+    <div class="menu">
+        <img src="Recursos/Logo.png" alt="Logo">
+        <div class="botonInicio">
+        </div>
+        <div class="botonInicio">
+            <a href="Index.html">Inicio</a>
+            <a href="Catalogo.html">Catálogo</a>
+            <a href="Info.html">Sobre Nosotros</a>
+            <a href="Formulario.html">Registrarse</a>
+            <a href="inicioSesion.html">Iniciar Sesion</a>
+        </div>
+    </div>
 </body>
 </html>
