David: Se creo el html del loging

--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -2,9 +2,21 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/styleSession.css">
+    <link rel="icon" href="Recursos/Logo.ico">
+    <title>Inicia Session</title>
 </head>
 <body>
-    <a href="Index.html">Volver</a>
+    <img src="Recursos/Logo.png" alt="Logo">
+    <fieldset class="Session">
+        <input type="email" required placeholder="Correo Electronico o Usuario">
+        <br>
+        <input type="password" required maxlength="100" placeholder="Contraseña">
+        <a href="inicioSesion.html">Ingresar</a>
+        <br>
+        <a href="inicioSesion.html">Olvide la Contraseña</a>
+        <br>
+        <p>No tienes cuenta? <a href="Formulario.html">Registrate</a></p>
+    </fieldset>
 </body>
 </html>
