Alejandra: Se creo styleInformation y se hicieron cambios, 2)se hicieron cambios en info.html de icono

--- a/Info.html
+++ b/Info.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="Recursos/Logo.ico">
+    <link rel="stylesheet" href="CSS/styleInformation.css">
+    <title>Informacion</title>
 </head>
 <body>
-    <a href="Index.html">Volver</a>
+    <div class="header">
+        <img src="Recursos/logo.png" alt="Logo">
+    </div>
+    <div class="botonVolver">
+        <a href="Index.html">Volver</a> 
+    </div>
+    
 </body>
 </html>
