--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -7,7 +7,11 @@
     <title>Inicia Session</title>
 </head>
 <body>
-    <img src="Recursos/Logo.png" alt="Logo">
+    <div class="imagen">
+        <a href="index.html">
+            <img src="Recursos/Logo.png" alt="Logo">
+        </a>
+    </div>
     <fieldset class="Session">
         <input type="email" required placeholder="Correo Electronico o Usuario">
         <br>
