David: 1. se le agrego el nuevo menu a todos los html 2. se le puso estilo al formulario de formulario.html (no es el definitivo, faltan ajustar cositas)

--- a/Catalogo.html
+++ b/Catalogo.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <div class="menu">
-        <img src="Recursos/Logo.png" alt="Logo">
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        </div>
         <div class="botonInicio">
         </div>
         <div class="botonInicio">
@@ -18,7 +22,6 @@
             <a href="inicioSesion.html">Iniciar Sesion</a>
         </div>
     </div>
-    <a href="Index.html">Volver</a>
     <section class="container">
         <h1 class ="title"> CERVEZAS ARTESANALES </h1>
         <p class=" descripcion">Explora nuestros productos destacados de cervezas artesanales de tres sabores distintos</p>
@@ -26,7 +29,9 @@
 
         <div class ="cerveza-list">
             <div class = "cerveza-item">
-                <img src="recursos/chocolate.jpg" alt="primer producto" >
+                <a href="Producto1.html">
+                    <img src="recursos/chocolate.jpg" alt="primer producto" >
+                </a>
                 <h3>cerveza artesanal de cafe</h3>
                 <p>Una cerveza artesanal de café es una bebida que combina lo mejor de la cerveza y el café, creando
                     una experiencia intensa y compleja en sabor y aroma. Generalmente, se elabora con maltas oscuras
@@ -38,7 +43,9 @@
 
 
         <div class = "cerveza-item">
-            <img src="recursos/cumbres-cafe.jpg" alt="segundo  producto" >
+            <a href="Producto2.html">
+                <img src="recursos/cumbres-cafe.jpg" alt="segundo  producto" >
+            </a>
             <h3>cerveza artesanal de chocolate</h3>
             <p>Una cerveza artesanal de chocolate es una bebida oscura y sedosa con intensas notas de cacao 
             y malta tostada. Su sabor combina dulzura y amargor equilibrado, con toques de vainilla, café y caramelo. 
@@ -48,7 +55,9 @@
         </div>
 
         <div class = "cerveza-item">
-            <img src="recursos/maracuya.jpg" alt="segundo  producto" width="500px" height="600px">
+            <a href="Producto3.html">
+                <img src="recursos/maracuya.jpg" alt="segundo  producto" width="500px" height="600px">
+            </a>
             <h3>cerveza artesanal de maracuya</h3>
             <p>Una cerveza artesanal de maracuyá es una bebida refrescante y exótica que fusiona el carácter artesanal 
                 de la cerveza con el vibrante sabor tropical del maracuyá. 
