--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="menu">
-        <img src="Recursos/Logo.png" alt="Logo">
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        </div>
         <div class="botonInicio">
         </div>
         <div class="botonInicio">
