--- a/Info.html
+++ b/Info.html
@@ -2,15 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Recursos/Logo.ico">
     <link rel="stylesheet" href="CSS/styleInformation.css">
     <title>Informacion</title>
 </head>
 <body>
     <div class="header">
-        <img src="Recursos/Logo.png" alt="Logo">
-        <h1><i>Sobre Nosotros</i></h1>
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        </div>
         <div class="botonInicio">
         </div>
         <div class="botonInicio">
@@ -20,9 +22,6 @@
             <a href="Formulario.html">Registrarse</a>
             <a href="inicioSesion.html">Iniciar Sesion</a>
         </div>
-    </div>
-    <div class="botonVolver">
-        <a href="Index.html">Volver</a>
     </div>
     <div class="introduction">
         <h1>¡Bienvenidos a Chevera! <p>Donde cada sorbo cuenta una historia personal.</h1>
