--- a/Info.html
+++ b/Info.html
@@ -8,9 +8,8 @@
     <title>Informacion</title>
 </head>
 <body>
-    <div class="header">
+    <div class="menu">
         <img src="Recursos/Logo.png" alt="Logo">
-        <h1><i>Sobre Nosotros</i></h1>
         <div class="botonInicio">
         </div>
         <div class="botonInicio">
@@ -21,31 +20,47 @@
             <a href="inicioSesion.html">Iniciar Sesion</a>
         </div>
     </div>
+    <header class="encabezado">
+        <h1><i>¡Bienvenidos a Chevera!</i></h1>
+        <h1><i>Donde cada sorbo cuenta una historia personal</i></h1>
+    </header>
+    <div class="introduction">
+        <img src="Recursos/friends.jpg" alt="friends">
+        <section>
+            <p>Ofrecemos un servicio exlusivo de suscripción y personalización de cerveza, diseñado para los amantes de la cerveza que valoran la calidad e individualidad.</p>
+        </section>
+    </div>
+    <br>
+    
+    <div class="history">
+        <h2><i>Sobre nuestra empresa</i></h2>
+        <img src="Recursos/production.jpg" alt="beer production">
+        <p>Fundada en 2023, Chevera se posiciona en el corazón de Colombia, combinando tradición cervecera
+            con innovación moderna. Nuestro objetivo es transformar la experiencia de beber cerveza, haciendo
+            cada producto una obra de arte personalizada.</p>
+    </div>
+    <div class="missionAndVision">
+        <img src="Recursos/mision.jpg" alt="mision de la empresa">
+        <section>
+        <h2>Mision</h2>
+            <p>Enriquecer la cultura cervecera ofreciendo experiencias personalizadas de alta calidad.</p>
+        </section>
+        <!-- <div class="en prueba">
+        <img src="Recursos/vision.jpg" alt="vision de la empresa">
+        <section>
+            <h2>Vision</h2>
+            <p>Ser líderes en el mercado de cervezas artesanales personalizadas, expandiéndonos a nivel
+            internacional y siendo reconocidos por nuestra innovación y compromiso con la sostenibilidad.</p>
+        </section> -->
+    </div>
     <div class="botonVolver">
         <a href="Index.html">Volver</a>
     </div>
-    <div class="introduction">
-        <h1>¡Bienvenidos a Chevera! <p>Donde cada sorbo cuenta una historia personal.</h1>
-        <img src="Recursos/friends.jpg" alt="friends">
-    <h2>Ofrecemos un servicio exlusivo de suscripción y personalización de cerveza, diseñado para los
-            amantes de la cerveza que valoran la calidad e individualidad.</h2>
-    </div>
-    <div class="history">
-        <h1>Sobre nuestra empresa</h1>
-        <img src="Recursos/production.jpg" alt="beer production">
-        <h2>Fundada en 2023, Chevera se posiciona en el corazón de Colombia, combinando tradición cervecera
-            con innovación moderna. Nuestro objetivo es transformar la experiencia de beber cerveza, haciendo
-            cada producto una obra de arte personalizada.</h2>
-    </div>
-    <div class="MissionAndVision">
-        <img src="" alt="">
-        <h1>Mision</h1>
-        <h2>Enriquecer la cultura cervecera ofreciendo experiencias personalizadas de alta calidad.</h2>
-        <h1>Vision</h1>
-        <h2>Ser líderes en el mercado de cervezas artesanales personalizadas, expandiéndonos a nivel
-            internacional y siendo reconocidos por nuestra innovación y compromiso con la sostenibilidad.</h2>
-    </div>
 
-    
+    <div class="contenedor">
+        <img class="img1" src="Recursos/suscribirse1.jpg" alt="">
+        <img class="img2" src="Recursos/suscribirse2.jpg" alt="">
+        <img class="img3" src="Recursos/suscribirse1.jpg" alt="">
+    </div>
 </body>
 </html>
