Alejandra: Se agregó cambios en info.html, en header (encabezado)

--- a/Info.html
+++ b/Info.html
@@ -23,6 +23,10 @@
             <a href="inicioSesion.html">Iniciar Sesion</a>
         </div>
     </div>
+    <header class="encabezado">
+        <h1><i>¡Bienvenidos a Chevera!</i></h1>
+        <h1><i>Donde cada sorbo cuenta una historia personal</i></h1>
+    </header>
     <div class="introduction">
         <img src="Recursos/friends.jpg" alt="friends">
         <section>
