--- a/Info.html
+++ b/Info.html
@@ -33,8 +33,6 @@
             <p>Ofrecemos un servicio exlusivo de suscripción y personalización de cerveza, diseñado para los amantes de la cerveza que valoran la calidad e individualidad.</p>
         </section>
     </div>
-    <br>
-    
     <div class="history">
         <h2><i>Sobre nuestra empresa</i></h2>
         <img src="Recursos/production.jpg" alt="beer production">
@@ -42,19 +40,20 @@
             con innovación moderna. Nuestro objetivo es transformar la experiencia de beber cerveza, haciendo
             cada producto una obra de arte personalizada.</p>
     </div>
-    <div class="missionAndVision">
+    <div class="mission">
         <img src="Recursos/mision.jpg" alt="mision de la empresa">
         <section>
-        <h2>Mision</h2>
+            <h2>Misión</h2>
             <p>Enriquecer la cultura cervecera ofreciendo experiencias personalizadas de alta calidad.</p>
         </section>
-        <!-- <div class="en prueba">
+    </div>
+    <div class="vision">
         <img src="Recursos/vision.jpg" alt="vision de la empresa">
         <section>
-            <h2>Vision</h2>
+            <h2>Visión</h2>
             <p>Ser líderes en el mercado de cervezas artesanales personalizadas, expandiéndonos a nivel
             internacional y siendo reconocidos por nuestra innovación y compromiso con la sostenibilidad.</p>
-        </section> -->
+        </section>
     </div>
     <div class="botonVolver">
         <a href="Index.html">Volver</a>
