David: Se termino el formulario

--- a/Formulario.html
+++ b/Formulario.html
@@ -27,15 +27,15 @@
         <h1>Formulario de Registro</h1>
         <fieldset>
             <label>Primer Nombre: </label>
-            <input type="text" name="nom" placeholder="Ingrese su nombre" required>
+            <input type="text" name="nom1" placeholder="Ingrese su nombre" required>
             <label>Segundo Nombre: </label>
-            <input type="text" name="nom" placeholder="Ingrese su nombre" required>
+            <input type="text" name="nom2" placeholder="Ingrese su nombre" required>
             <br>
             <label>Primer Apellido:</label>
-            <input type="text" name="apell" placeholder="Ingrese su Apellido" required>
+            <input type="text" name="apell1" placeholder="Ingrese su Apellido" required>
             <label>Segundo Apellido:</label>
-            <input type="text" name="apell" placeholder="Ingrese su Apellido" required>
-            <div>
+            <input type="text" name="apell2" placeholder="Ingrese su Apellido" required>
+            <div class="email">
                 <label for="emai">E-mail: </label>
                 <input type="email" name="correo" placeholder="Ingrese su correo" id="emai" required>
             </div>
