--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="Recursos/Logo.ico">
     <link rel="stylesheet" href="CSS/styleIndex.css">
-    <title>Index</title>
+    <title>Chevera</title>
 </head>
 <body>
     <div class="menu">
