valerin contenido de inicio, html y css

--- a/Catalogo.html
+++ b/Catalogo.html
@@ -56,7 +56,7 @@
 
         <div class = "cerveza-item">
             <a href="Producto3.html">
-                <img src="recursos/maracuya.jpg" alt="segundo  producto" width="500px" height="600px">
+                <img src="recursos/maracuya.jpg" alt="tercer producto" >
             </a>
             <h3>cerveza artesanal de maracuya</h3>
             <p>Una cerveza artesanal de maracuyá es una bebida refrescante y exótica que fusiona el carácter artesanal 
