--- a/Producto3.html
+++ b/Producto3.html
@@ -78,6 +78,12 @@
             <p><strong>María Rodríguez:</strong> Me gustó mucho, perfecta para disfrutar con amigos.</p>
         </div>
     </div>
-
+    <footer>
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        <p>&copy; Chevera - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
