Alejandra: se agregó contenido en info.html

--- a/Info.html
+++ b/Info.html
@@ -30,7 +30,9 @@
         <div class="introduction">
             <img src="Recursos/friends.jpg" alt="friends">
             <section>
-                <p>Ofrecemos un servicio exlusivo de suscripción y personalización de cerveza, diseñado para los amantes de la cerveza que valoran la calidad e individualidad.</p>
+                <p>En <b>Chevera</b>, creemos que cada cerveza es más que una bebida.</p>
+                <p>Es una experiencia única que merece ser disfrutada con autenticidad y estilo. Por eso, ofrecemos un servicio exclusivo de suscripción y personalización de cerveza, pensado para aquellos amantes de la cerveza que valoran la calidad, la originalidad y la individualidad.</p>
+                <p>Con <b>Chevera</b>, podrás descubrir sabores únicos, diseñar etiquetas personalizadas y explorar una variedad de cervezas artesanales seleccionadas especialmente para ti. Nos apasiona brindarte una experiencia a la medida, en la que cada detalle refleja tu esencia y tus gustos.</p>
             </section>
         </div>
         <div class="history">
