--- a/Producto2.html
+++ b/Producto2.html
@@ -2,9 +2,89 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/styleProducto3.css">
+    <link rel="icon" href="Recursos/Logo.ico">
+    <title>Cerveza de chocolate</title>
 </head>
 <body>
-    <a href="Index.html">Volver</a>
+    <div class="menu">
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        </div>
+        <div class="botonInicio">
+        </div>
+        <div class="botonInicio">
+            <a href="Index.html">Inicio</a>
+            <a href="Catalogo.html">Catálogo</a>
+            <a href="Info.html">Sobre Nosotros</a>
+            <a href="Formulario.html">Registrarse</a>
+            <a href="inicioSesion.html">Iniciar Sesion</a>
+        </div>
+    </div>
+    <div class="producto">
+        <div class="imagenProducto">
+            <h1>Cerveza de cafe</h1>
+            <img src="Recursos/cumbres-cafe.jpg" alt="Cerveza de cafe">
+        </div>
+        <div class="detallesProducto">
+            <div class="sabores">
+                <h2>Elige Dos Sabores Adicionales</h2>
+                <form>
+                    <input type="checkbox" id="sabores1" name="sabores" value="Postres">
+                    <label for="sabores1">Postres</label><br>
+                    <input type="checkbox" id="sabores2" name="sabores" value="Vainilla">
+                    <label for="sabores2">Vainilla</label><br>
+                    <input type="checkbox" id="sabores3" name="sabores" value="Quesos cremosos">
+                    <label for="sabores3">Quesos cremosos</label><br>
+                    <input type="checkbox" id="sabores4" name="sabores" value="Caramelo salado">
+                    <label for="sabores4">Caramelo salado</label><br>
+                </form>
+            </div>
+
+            <div class="especificaciones">
+                <h2>Especificaciones del Producto</h2>
+                <ul>
+                    <li>Volumen: 500 ml</li>
+                    <li>Alcohol: 5.5%</li>
+                    <li>Ingredientes: Agua, cebada, lúpulo, cafe</li>
+                </ul>
+            </div>
+            <p>Descripción del producto: Una cerveza artesanal <br>de chocolate es una bebida que combina la creatividad cervecera con los ricos sabores del cacao.</p>
+            <p>Precio: $10000 COP</p>
+            <br>
+            <button class="botonCompra">Comprar</button>
+        </div>
+    </div>
+    </div>
+    
+    <div class="galeria">
+        <h2>Galería de Imágenes</h2>
+        <div class="imagenes">
+            <div class="imagenGaleria" id="galeria-img1">
+                <img src="Recursos/chocolate2.0.jpg" alt="Cerveza de chocolate">
+            </div>
+            <div class="imagenGaleria" id="galeria-img2">
+                <img src="Recursos/chocolate3.0.jpg" alt="Cerveza de chocolate">
+            </div>
+        </div>
+    </div>
+    <div class="opiniones">
+        <h2>Opiniones de Clientes</h2>
+        <div class="opinion">
+            <p><strong>Juan Pérez:</strong> Excelente cerveza, me encantó el sabor y la frescura. ¡La recomiendo!</p>
+        </div>
+        <div class="opinion">
+            <p><strong>María Rodríguez:</strong> Me gustó mucho, perfecta para disfrutar con amigos.</p>
+        </div>
+    </div>
+    <footer>
+        <div class="imagen">
+            <a href="index.html">
+                <img src="Recursos/Logo.png" alt="Logo">
+            </a>
+        <p>&copy; Chevera - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
