--- a/Producto3.html
+++ b/Producto3.html
@@ -52,7 +52,7 @@
                 </ul>
             </div>
             <p>Descripción del producto: Una cerveza artesanal <br> de marayucá con un sabor único y refrescante.</p>
-            <p>Precio: $0 COP</p>
+            <p>Precio: $10000 COP</p>
             <br>
             <button class="botonCompra">Comprar</button>
         </div>
@@ -62,10 +62,10 @@
         <h2>Galería de Imágenes</h2>
         <div class="imagenes">
             <div class="imagenGaleria" id="galeria-img1">
-                <img src="Recursos/Cerveza1.png" alt="Cerveza de marayucá">
+                <img src="Recursos/maracuya3.0.png" alt="Cerveza de marayucá">
             </div>
             <div class="imagenGaleria" id="galeria-img2">
-                <img src="Recursos/Cerveza2.png" alt="Cerveza de marayucá">
+                <img src="Recursos/maracuya2.0.png" alt="Cerveza de marayucá">
             </div>
         </div>
     </div>
