David: se ajustaron estilos

--- a/Producto1.html
+++ b/Producto1.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/producto1.css">
+    <link rel="stylesheet" href="CSS/styleProducto.css">
     <link rel="icon" href="Recursos/Logo.ico">
     <title>Cerveza de cafe</title>
 </head>
