--- a/Producto3.html
+++ b/Producto3.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/styleProducto3.css">
+    <link rel="stylesheet" href="CSS/styleProducto.css">
     <link rel="icon" href="Recursos/Logo.ico">
     <title>Cerveza de marayucá</title>
 </head>
