David: se le agrego animaciones a catalogo y a info, ademas de que se arreglaron algunos estilos

--- a/Catalogo.html
+++ b/Catalogo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Catalogo de productos</title>
     <link rel="stylesheet" href="CSS/catalogo.css">
+    <link rel="icon" href="Recursos/Logo.ico">
 </head>
 <body>
     <div class="menu">
@@ -25,13 +26,13 @@
     <section class="container">
         <h1 class ="title"> CERVEZAS ARTESANALES </h1>
         <p class=" descripcion">Explora nuestros productos destacados de cervezas artesanales de tres sabores distintos</p>
-<br><br>
-
+        <br><br>
         <div class ="cerveza-list">
             <div class = "cerveza-item">
                 <a href="Producto1.html">
                     <img src="recursos/chocolate.jpg" alt="primer producto" >
                 </a>
+                <br><br>
                 <div class="boton">
                     <a href="Producto1.html">ver</a>
                 </div>
@@ -50,6 +51,7 @@
             <a href="Producto2.html">
                 <img src="recursos/cumbres-cafe.jpg" alt="segundo  producto" >
             </a>
+            <br><br>
             <div class="boton">
                 <a href="Producto1.html">ver</a>
             </div>
@@ -66,6 +68,7 @@
             <a href="Producto3.html">
                 <img src="recursos/maracuya.jpg" alt="tercer producto" >
             </a>
+            <br><br>
             <div class="boton">
                 <a href="Producto1.html">ver</a>
             </div>
